# market-data-server-rust

./: .dockerignore  .gitignore  CHANGELOG.md  CONTEXT.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.cn  OPS_GUIDE.md  README.md  RELEASE_WORKFLOW.md  REWRITE-PLAN.md  RISK-ANALYSIS.md  TDD-PHASE1.md  TDD-PHASE2.md  config.yaml  deploy.sh  docker-compose.prod.yml
.github/workflows/: ci.yml  release.yml
crates/md-config/: Cargo.toml
crates/md-config/src/: lib.rs
crates/md-connector/: Cargo.toml
crates/md-connector/src/: base.rs  binance.rs  lib.rs  okx.rs
crates/md-domain/: Cargo.toml
crates/md-domain/src/: lib.rs  serde_helpers.rs  topic.rs  types.rs  types_test.rs
crates/md-gateway/: Cargo.toml
crates/md-gateway/src/: lib.rs  rest.rs  ws.rs
crates/md-grpc/: Cargo.toml
crates/md-grpc/src/: admin_service.rs  lib.rs  market_data.rs
crates/md-processor/: Cargo.toml
crates/md-processor/src/: lib.rs
crates/md-proto/: Cargo.toml  build.rs
crates/md-proto/proto/: admin.proto  marketdata.proto
crates/md-proto/src/: lib.rs
crates/md-server/: Cargo.toml
crates/md-server/src/: main.rs  process_metrics.rs
crates/md-tests/: Cargo.toml
crates/md-tests/tests/: json_compat.rs
crates/md-tests/tests/fixtures/: kline_binance_btcusdt_1m.json  subscriptions.json  tick_binance_btcusdt.json  tick_okx_btc-usdt-swap.json
dashboards/: md-server-rust.json
deploy/: prometheus.yml
docs/adr/: 0001-json-omitempty-compatibility.md
scripts/: capture-snapshots.sh
