[package]
name = "md-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
md-domain = { path = "../md-domain" }
md-config = { path = "../md-config" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
async-trait = "0.1"
url = "2"
socket2 = "0.5"

[features]
# 默认不启用；仅在交叉编译（如本机 macOS -> x86_64 Linux）时启用，
# 让 OpenSSL 随源码一起静态编译，避免依赖目标平台的 libssl。
vendored-tls = ["tokio-tungstenite/native-tls-vendored"]

[dev-dependencies]
