[package]
name = "md-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
md-domain = { path = "../md-domain" }
md-processor = { path = "../md-processor" }
md-connector = { path = "../md-connector" }
tokio = { version = "1", features = ["sync", "rt", "macros"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
futures-util = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
